opam-version: "2.0"
version:      "1.0.4"
name:         "rfc6287"
homepage:     "https://github.com/sg2342/ocaml-rfc6287"
dev-repo:     "git+https://github.com/sg2342/ocaml-rfc6287.git"
bug-reports:  "https://github.com/sg2342/ocaml-rfc6287/issues"
author:       ["Stefan Grundmann <sg2342@googlemail.com>"]
maintainer:   ["Stefan Grundmann <sg2342@googlemail.com>"]
license:      "BSD2"
doc: 	      "https://sg2342.github.io/ocaml-rfc6287/doc"



build: [
    [ "dune" "build" "-p" name "-j" jobs ]
]

run-test: [
    [ "dune" "runtest" ]
]

depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {build}
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "topkg" {build}
  "nocrypto" {>= "0.5.1"}
  "cstruct" {>= "1.7.0"}
  "astring"
  "hex"
  "rresult"
  "ounit" {with-test}
  "bisect_ppx" {build & >= "1.3.0"}
]
